--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,4 @@ These are the Python libraries needed for the backend.
 Install them using: pip install -r requirements.txt
 Flask
 Flask-CORS
+gunicorn==22.0.0
